fix: next-prev click target too small regression

--- a/packages/gatsby-theme-carbon/src/components/NextPrevious/NextPrevious.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/NextPrevious/NextPrevious.module.scss
@@ -12,18 +12,20 @@
 }
 
 .link {
-  padding: 1rem;
+  padding: 0;
   transition: background $duration--fast-02 $carbon--standard-easing;
 
   &:hover {
     color: $carbon--white-0;
     background: $carbon--gray-80;
-    cursor: pointer;
   }
 }
 
 .link a {
+  padding: 1rem;
   text-decoration: none;
+  display: block;
+  height: 100%;
   color: $carbon--white-0;
 }
 
